# dicom_service

./: .gitignore  README.md  __init__.py  docker-compose.yml  pyproject.toml
grpc_backend/: Dockerfile  db.py  file_service.proto  file_service_pb2.py  file_service_pb2_grpc.py  models.py  server.py  tag_extractor.py
rest_api/: Dockerfile  app.py
